# List-Decodable-Regression-via-Expander-Sketching

./: .gitignore  README.md  TODO.md  pyproject.toml
Implementation/: data.py  expander_sketch_list.py  expander_sketch_single.py  experiments_real.py  experiments_real_wine_uniform.py  experiments_synthetic.py  experiments_synthetic_legacy.py  synthetic_core.py  synthetic_plots.py  synthetic_sweeps.py
Implementation/Tables/: results_alpha_paramerr_expanderL.csv  results_alpha_paramerr_uniform.csv  results_outlier_scale.csv  results_paramerr_outlier_scale_all.csv  results_paramerr_outlier_scale_expanderL.csv  results_sweep_B.csv  results_sweep_R.csv  results_sweep_T.csv  results_sweep_cluster_radius.csv  results_sweep_dL.csv  results_sweep_lambda.csv  results_sweep_n_d.csv  results_sweep_outlier_scale.csv  results_sweep_rho.csv  results_sweep_theta.csv  results_uniform.csv
docs/: algorithm.md  api.md  experiments.md  index.md  theory.md
examples/: run_synthetic_experiment.py  synthetic_demo.ipynb
src/expander_ldr/: __init__.py  bucket_stats.py  clustering.py  estimator.py  expander.py  experiments.py  filtering.py  robust_agg.py  utils.py
tests/: conftest.py  test_bucket_stats.py  test_clustering.py  test_estimator_api.py  test_expander.py  test_experiments.py  test_filtering.py  test_robust_agg.py
