[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expander-ldr"
version = "0.0.1"
description = "List-decodable regression via expander sketching"
authors = [{name = "Research Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://example.com/expander-ldr"
Repository = "https://example.com/expander-ldr/repo"
Documentation = "https://example.com/expander-ldr/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["expander_ldr*"]
