[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expander-ldr"
version = "0.0.1"
description = "List-decodable regression via expander sketching"
authors = [{name = "Herbod Pourali"}, {name = "Sajjad Hashemian"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://www.arxiv.org/abs/2511.22524"
Repository = "https://github.com/sajjadhashemian/List-Decodable-Regression-via-Expander-Sketching"
Documentation = "https://github.com/sajjadhashemian/List-Decodable-Regression-via-Expander-Sketching/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["expander_ldr*"]